fix: nowrap label in form

--- a/form/input.scss
+++ b/form/input.scss
@@ -63,6 +63,7 @@
     line-height: 1rem;
     font-size: 80%;
     cursor: default;
+    white-space: nowrap;
   }
 
 
